# non-linear-scaling

./: .gitignore  README.md  activate.sh  pyproject.toml
scripts/: combine_videos_horizontally.py
sim/: Makefile  README.md  compare_rtl.py  generate_histogram_resolution_videos.py  hist_nonlinear_model.py  rtl_sim_main.cpp  test_hist_nonlinear_model.py  view_video_stream.py  view_waveform.sh
software-sim/: README.md  enhance_corrected_videos.py  pyproject.toml  show_i3s_frames.py
software-sim/src/histogram_nonlinear_scaling/: __init__.py  nonlinear.py
software-sim/tests/: test_nonlinear.py
src/: hist_nonlinear_axi.v  synth_hist_nonlinear_axi.sh
