[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "histogram-nonlinear-scaling"
version = "0.1.0"
description = "NumPy implementation of the non-linear histogram-based IR image scaling algorithm."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23", "matplotlib>=3.7"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
